--- a/bucket_list/package.json
+++ b/bucket_list/package.json
@@ -11,6 +11,7 @@
     "open-color": "^1.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass-loader": "^10.1.1",
     "styled-components": "^5.2.1",
