--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2"
+    "@material-ui/icons": "^4.11.2",
+    "firebase": "^8.2.6",
+    "firebase-tools": "^9.3.0",
+    "global": "^4.4.0"
   }
 }
